// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCrudPage — snapshot tests > generates stable output for: 员工花名册 1`] = `
"<template>
  <es-table
    ref="tableRef"
    :columns="columns"
    :options="options"
    v-model:data-source="tableData"
    v-model:pagination="pagination"
  >
    <es-form :model="queryForm" :form-item-list="formItems" :config-btn="queryBtns" />
  </es-table>
</template>

<script setup lang="jsx">
import { reactive, ref, h } from 'vue'
import { useDialog } from '@es-plus/vue3'
import { ElTag } from 'element-plus'

const queryForm = reactive({ name: '', department: '', position: '' })
const tableData = ref([])
const tableRef = ref(null)
const pagination = ref({ current: 1, pageSize: 10, total: 0 })
const dialog = useDialog()

const formItems = [
  {
    "prop": "name",
    "label": "姓名",
    "formtype": "Input",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入姓名"
    }
  },
  {
    "prop": "department",
    "label": "部门",
    "formtype": "Input",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入部门"
    }
  },
  {
    "prop": "position",
    "label": "职位",
    "formtype": "Input",
    "span": 12,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入职位"
    }
  }
]

const queryBtns = [
  { name: '查询', type: 'primary', key: 'query', triggerEvent: true },
  { name: '重置', key: 'rest', triggerEvent: true },
  { name: '新增', type: 'primary', key: 'add', icon: 'Plus', click: () => openForm('新增') },
]

const columns = [
  {
    "prop": "name",
    "label": "姓名"
  },
  {
    "prop": "department",
    "label": "部门"
  },
  {
    "prop": "position",
    "label": "职位"
  },
  {
    "prop": "gender",
    "label": "性别"
  },
  {
    "prop": "age",
    "label": "年龄"
  },
  {
    "prop": "phone",
    "label": "手机号"
  },
  {
    "prop": "status",
    "label": "状态",
    render: (_, { row }) => h(ElTag, { type: row.status === 1 ? 'success' : 'danger' }, () => row.status === 1 ? '启用' : '禁用')
  },
  {
    "prop": "operate",
    "label": "操作",
    "width": 100,
    "btns": [
      {
        "name": "编辑", "type": "primary", "clickEvent": (row) => openForm('编辑', row)
      }
    ]
  }
]

const options = {
  "border": true,
  "stripe": true,
  "highlightCurrentRow": true,
  "headerCellStyle": {
    "background": "#f5f7fa"
  },
  "rowkey": "id"
}

function openForm(title, row = {}) {
  const formData = reactive({ name: '', department: '', position: '', gender: '', age: '', phone: '', status: '', ...row })
  const isView = title === '查看'
  dialog({
    title,
    width: '500px',
    render: (h, { registerRef }) => (
      <EsForm
        ref={el => el && registerRef('form', el)}
        model={formData}
        formItemList={[
        {
                "prop": "name",
                "label": "姓名",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入姓名"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入姓名",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "department",
                "label": "部门",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入部门"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入部门",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "position",
                "label": "职位",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入职位"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入职位",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "gender",
                "label": "性别",
                "formtype": "Radio",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择性别"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择性别",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "男",
                                "value": "male"
                        },
                        {
                                "label": "女",
                                "value": "female"
                        }
                ]
        },
        {
                "prop": "age",
                "label": "年龄",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入年龄"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入年龄",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "phone",
                "label": "手机号",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入手机号"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入手机号",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "status",
                "label": "状态",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择状态"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择状态",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "启用",
                                "value": 1
                        },
                        {
                                "label": "禁用",
                                "value": 0
                        }
                ]
        }
]}
      />
    ),
    configBtn: isView ? [
      { name: '关闭', click: (_, { close }) => close() }
    ] : [
      { name: '取消', click: (_, { close }) => close() },
      { name: '确定', type: 'primary', click: async (_, { close, getRefs }) => {
        try {
          await getRefs('form')?.validate()
          // TODO: 调用保存接口
          // await axios.post('/api/save', formData)
          close()
          tableRef.value?.httpRequestInstance()
        } catch {
          // 表单验证失败
        }
      }}
    ]
  })
}
</script>"
`;

exports[`generateCrudPage — snapshot tests > generates stable output for: 商品管理 1`] = `
"<template>
  <es-table
    ref="tableRef"
    :columns="columns"
    :options="options"
    v-model:data-source="tableData"
    v-model:pagination="pagination"
  >
    <es-form :model="queryForm" :form-item-list="formItems" :config-btn="queryBtns" />
  </es-table>
</template>

<script setup lang="jsx">
import { reactive, ref, h } from 'vue'
import { useDialog } from '@es-plus/vue3'
import { ElTag, ElMessageBox, ElMessage } from 'element-plus'

const queryForm = reactive({ productName: '', category: '', status: '' })
const tableData = ref([])
const tableRef = ref(null)
const pagination = ref({ current: 1, pageSize: 10, total: 0 })
const dialog = useDialog()

const formItems = [
  {
    "prop": "productName",
    "label": "商品名称",
    "formtype": "Input",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入商品名称"
    }
  },
  {
    "prop": "category",
    "label": "分类",
    "formtype": "Select",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择分类"
    },
    "dataOptions": [
      {
        "label": "类型A",
        "value": "A"
      },
      {
        "label": "类型B",
        "value": "B"
      },
      {
        "label": "类型C",
        "value": "C"
      }
    ]
  },
  {
    "prop": "status",
    "label": "状态",
    "formtype": "Select",
    "span": 12,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择状态"
    },
    "dataOptions": [
      {
        "label": "启用",
        "value": 1
      },
      {
        "label": "禁用",
        "value": 0
      }
    ]
  }
]

const queryBtns = [
  { name: '查询', type: 'primary', key: 'query', triggerEvent: true },
  { name: '重置', key: 'rest', triggerEvent: true },
  { name: '新增', type: 'primary', key: 'add', icon: 'Plus', click: () => openForm('新增') },
]

const columns = [
  {
    "prop": "category",
    "label": "分类"
  },
  {
    "prop": "status",
    "label": "状态",
    render: (_, { row }) => h(ElTag, { type: row.status === 1 ? 'success' : 'danger' }, () => row.status === 1 ? '启用' : '禁用')
  },
  {
    "prop": "name",
    "label": "名称"
  },
  {
    "prop": "price",
    "label": "价格",
    "align": "right"
  },
  {
    "prop": "stock",
    "label": "库存"
  },
  {
    "prop": "operate",
    "label": "操作",
    "width": 180,
    "btns": [
      {
        "name": "编辑", "type": "primary", "clickEvent": (row) => openForm('编辑', row)
      },
      {
        "name": "删除", "type": "danger", "clickEvent": (row) => handleDelete(row)
      }
    ]
  }
]

const options = {
  "border": true,
  "stripe": true,
  "highlightCurrentRow": true,
  "headerCellStyle": {
    "background": "#f5f7fa"
  },
  "rowkey": "id"
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      // await axios.delete(\`/api/item/\${row.id}\`)
      ElMessage.success('删除成功')
      tableRef.value?.httpRequestInstance()
    })
    .catch(() => {})
}

function openForm(title, row = {}) {
  const formData = reactive({ productName: '', category: '', status: '', name: '', price: '', stock: '', ...row })
  const isView = title === '查看'
  dialog({
    title,
    width: '500px',
    render: (h, { registerRef }) => (
      <EsForm
        ref={el => el && registerRef('form', el)}
        model={formData}
        formItemList={[
        {
                "prop": "productName",
                "label": "商品名称",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入商品名称"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入商品名称",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "category",
                "label": "分类",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择分类"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择分类",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "类型A",
                                "value": "A"
                        },
                        {
                                "label": "类型B",
                                "value": "B"
                        },
                        {
                                "label": "类型C",
                                "value": "C"
                        }
                ]
        },
        {
                "prop": "status",
                "label": "状态",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择状态"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择状态",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "启用",
                                "value": 1
                        },
                        {
                                "label": "禁用",
                                "value": 0
                        }
                ]
        },
        {
                "prop": "name",
                "label": "名称",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入名称"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入名称",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "price",
                "label": "价格",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入价格"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入价格",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "stock",
                "label": "库存",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入库存"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入库存",
                                        "trigger": "blur"
                                }
                        ]
                }
        }
]}
      />
    ),
    configBtn: isView ? [
      { name: '关闭', click: (_, { close }) => close() }
    ] : [
      { name: '取消', click: (_, { close }) => close() },
      { name: '确定', type: 'primary', click: async (_, { close, getRefs }) => {
        try {
          await getRefs('form')?.validate()
          // TODO: 调用保存接口
          // await axios.post('/api/save', formData)
          close()
          tableRef.value?.httpRequestInstance()
        } catch {
          // 表单验证失败
        }
      }}
    ]
  })
}
</script>"
`;

exports[`generateCrudPage — snapshot tests > generates stable output for: 文章管理 1`] = `
"<template>
  <es-table
    ref="tableRef"
    :columns="columns"
    :options="options"
    v-model:data-source="tableData"
    v-model:pagination="pagination"
  >
    <es-form :model="queryForm" :form-item-list="formItems" :config-btn="queryBtns" />
  </es-table>
</template>

<script setup lang="jsx">
import { reactive, ref, h } from 'vue'
import { useDialog } from '@es-plus/vue3'
import { ElTag, ElMessageBox, ElMessage } from 'element-plus'

const queryForm = reactive({ title: '', category: '', status: '' })
const tableData = ref([])
const tableRef = ref(null)
const pagination = ref({ current: 1, pageSize: 10, total: 0 })
const dialog = useDialog()

const formItems = [
  {
    "prop": "title",
    "label": "标题",
    "formtype": "Input",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入标题"
    }
  },
  {
    "prop": "category",
    "label": "分类",
    "formtype": "Select",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择分类"
    },
    "dataOptions": [
      {
        "label": "类型A",
        "value": "A"
      },
      {
        "label": "类型B",
        "value": "B"
      },
      {
        "label": "类型C",
        "value": "C"
      }
    ]
  },
  {
    "prop": "status",
    "label": "状态",
    "formtype": "Select",
    "span": 12,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择状态"
    },
    "dataOptions": [
      {
        "label": "启用",
        "value": 1
      },
      {
        "label": "禁用",
        "value": 0
      }
    ]
  }
]

const queryBtns = [
  { name: '查询', type: 'primary', key: 'query', triggerEvent: true },
  { name: '重置', key: 'rest', triggerEvent: true },
  { name: '新增', type: 'primary', key: 'add', icon: 'Plus', click: () => openForm('新增') },
]

const columns = [
  {
    "prop": "title",
    "label": "标题"
  },
  {
    "prop": "category",
    "label": "分类"
  },
  {
    "prop": "status",
    "label": "状态",
    render: (_, { row }) => h(ElTag, { type: row.status === 1 ? 'success' : 'danger' }, () => row.status === 1 ? '启用' : '禁用')
  },
  {
    "prop": "creator",
    "label": "创建人"
  },
  {
    "prop": "createTime",
    "label": "创建时间",
    "width": 180
  },
  {
    "prop": "operate",
    "label": "操作",
    "width": 180,
    "btns": [
      {
        "name": "编辑", "type": "primary", "clickEvent": (row) => openForm('编辑', row)
      },
      {
        "name": "删除", "type": "danger", "clickEvent": (row) => handleDelete(row)
      }
    ]
  }
]

const options = {
  "border": true,
  "stripe": true,
  "highlightCurrentRow": true,
  "headerCellStyle": {
    "background": "#f5f7fa"
  },
  "rowkey": "id"
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      // await axios.delete(\`/api/item/\${row.id}\`)
      ElMessage.success('删除成功')
      tableRef.value?.httpRequestInstance()
    })
    .catch(() => {})
}

function openForm(title, row = {}) {
  const formData = reactive({ title: '', category: '', status: '', creator: '', createTime: '', ...row })
  const isView = title === '查看'
  dialog({
    title,
    width: '500px',
    render: (h, { registerRef }) => (
      <EsForm
        ref={el => el && registerRef('form', el)}
        model={formData}
        formItemList={[
        {
                "prop": "title",
                "label": "标题",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入标题"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入标题",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "category",
                "label": "分类",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择分类"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择分类",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "类型A",
                                "value": "A"
                        },
                        {
                                "label": "类型B",
                                "value": "B"
                        },
                        {
                                "label": "类型C",
                                "value": "C"
                        }
                ]
        },
        {
                "prop": "status",
                "label": "状态",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择状态"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择状态",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "启用",
                                "value": 1
                        },
                        {
                                "label": "禁用",
                                "value": 0
                        }
                ]
        },
        {
                "prop": "creator",
                "label": "创建人",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入创建人"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入创建人",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "createTime",
                "label": "创建时间",
                "formtype": "datePicker",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择创建时间",
                        "type": "daterange",
                        "valueFormat": "YYYY-MM-DD"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入创建时间",
                                        "trigger": "blur"
                                }
                        ]
                }
        }
]}
      />
    ),
    configBtn: isView ? [
      { name: '关闭', click: (_, { close }) => close() }
    ] : [
      { name: '取消', click: (_, { close }) => close() },
      { name: '确定', type: 'primary', click: async (_, { close, getRefs }) => {
        try {
          await getRefs('form')?.validate()
          // TODO: 调用保存接口
          // await axios.post('/api/save', formData)
          close()
          tableRef.value?.httpRequestInstance()
        } catch {
          // 表单验证失败
        }
      }}
    ]
  })
}
</script>"
`;

exports[`generateCrudPage — snapshot tests > generates stable output for: 日志查询 1`] = `
"<template>
  <es-table
    ref="tableRef"
    :columns="columns"
    :options="options"
    v-model:data-source="tableData"
    v-model:pagination="pagination"
  >
    <es-form :model="queryForm" :form-item-list="formItems" :config-btn="queryBtns" />
  </es-table>
</template>

<script setup lang="jsx">
import { reactive, ref } from 'vue'
import { useDialog } from '@es-plus/vue3'

const queryForm = reactive({ field_2: '', level: '', field_3: '' })
const tableData = ref([])
const tableRef = ref(null)
const pagination = ref({ current: 1, pageSize: 10, total: 0 })
const dialog = useDialog()

const formItems = [
  {
    "prop": "field_2",
    "label": "查询关键词",
    "formtype": "Input",
    "span": 8,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入查询关键词"
    }
  },
  {
    "prop": "level",
    "label": "级别",
    "formtype": "Select",
    "span": 8,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择级别"
    },
    "dataOptions": [
      {
        "label": "类型A",
        "value": "A"
      },
      {
        "label": "类型B",
        "value": "B"
      },
      {
        "label": "类型C",
        "value": "C"
      }
    ]
  },
  {
    "prop": "field_3",
    "label": "日期范围",
    "formtype": "datePicker",
    "span": 8,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择日期范围",
      "type": "daterange",
      "valueFormat": "YYYY-MM-DD"
    }
  }
]

const queryBtns = [
  { name: '查询', type: 'primary', key: 'query', triggerEvent: true },
  { name: '重置', key: 'rest', triggerEvent: true },
]

const columns = [
  {
    "prop": "level",
    "label": "级别"
  },
  {
    "prop": "time",
    "label": "时间"
  },
  {
    "prop": "operate",
    "label": "操作",
    "width": 100,
    "btns": [
      {
        "name": "查看", "type": "primary", "clickEvent": (row) => openForm('查看', row)
      }
    ]
  }
]

const options = {
  "border": true,
  "stripe": true,
  "highlightCurrentRow": true,
  "headerCellStyle": {
    "background": "#f5f7fa"
  },
  "rowkey": "id"
}

function openForm(title, row = {}) {
  const formData = reactive({ field_2: '', level: '', field_3: '', time: '', ...row })
  const isView = title === '查看'
  dialog({
    title,
    width: '500px',
    render: (h, { registerRef }) => (
      <EsForm
        ref={el => el && registerRef('form', el)}
        model={formData}
        formItemList={[
        {
                "prop": "field_2",
                "label": "查询关键词",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入查询关键词"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入查询关键词",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "level",
                "label": "级别",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择级别"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择级别",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "类型A",
                                "value": "A"
                        },
                        {
                                "label": "类型B",
                                "value": "B"
                        },
                        {
                                "label": "类型C",
                                "value": "C"
                        }
                ]
        },
        {
                "prop": "field_3",
                "label": "日期范围",
                "formtype": "datePicker",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择日期范围",
                        "type": "daterange",
                        "valueFormat": "YYYY-MM-DD"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入日期范围",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "time",
                "label": "时间",
                "formtype": "timePicker",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择时间",
                        "type": "timerange"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入时间",
                                        "trigger": "blur"
                                }
                        ]
                }
        }
]}
      />
    ),
    configBtn: isView ? [] : [
      { name: '取消', click: (_, { close }) => close() },
      { name: '确定', type: 'primary', click: async (_, { close, getRefs }) => {
        try {
          await getRefs('form')?.validate()
          // TODO: 调用保存接口
          // await axios.post('/api/save', formData)
          close()
          tableRef.value?.httpRequestInstance()
        } catch {
          // 表单验证失败
        }
      }}
    ]
  })
}
</script>"
`;

exports[`generateCrudPage — snapshot tests > generates stable output for: 用户管理 1`] = `
"<template>
  <es-table
    ref="tableRef"
    :columns="columns"
    :options="options"
    v-model:data-source="tableData"
    v-model:pagination="pagination"
  >
    <es-form :model="queryForm" :form-item-list="formItems" :config-btn="queryBtns" />
  </es-table>
</template>

<script setup lang="jsx">
import { reactive, ref, h } from 'vue'
import { useDialog } from '@es-plus/vue3'
import { ElTag, ElMessageBox, ElMessage } from 'element-plus'

const queryForm = reactive({ name: '', phone: '', status: '' })
const tableData = ref([])
const tableRef = ref(null)
const pagination = ref({ current: 1, pageSize: 10, total: 0 })
const dialog = useDialog()

const formItems = [
  {
    "prop": "name",
    "label": "姓名",
    "formtype": "Input",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入姓名"
    }
  },
  {
    "prop": "phone",
    "label": "手机号",
    "formtype": "Input",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入手机号"
    }
  },
  {
    "prop": "status",
    "label": "状态",
    "formtype": "Select",
    "span": 12,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择状态"
    },
    "dataOptions": [
      {
        "label": "启用",
        "value": 1
      },
      {
        "label": "禁用",
        "value": 0
      }
    ]
  }
]

const queryBtns = [
  { name: '查询', type: 'primary', key: 'query', triggerEvent: true },
  { name: '重置', key: 'rest', triggerEvent: true },
  { name: '新增', type: 'primary', key: 'add', icon: 'Plus', click: () => openForm('新增') },
]

const columns = [
  {
    "prop": "name",
    "label": "姓名"
  },
  {
    "prop": "phone",
    "label": "手机号"
  },
  {
    "prop": "status",
    "label": "状态",
    render: (_, { row }) => h(ElTag, { type: row.status === 1 ? 'success' : 'danger' }, () => row.status === 1 ? '启用' : '禁用')
  },
  {
    "prop": "email",
    "label": "邮箱"
  },
  {
    "prop": "createTime",
    "label": "创建时间",
    "width": 180
  },
  {
    "prop": "operate",
    "label": "操作",
    "width": 180,
    "btns": [
      {
        "name": "编辑", "type": "primary", "clickEvent": (row) => openForm('编辑', row)
      },
      {
        "name": "删除", "type": "danger", "clickEvent": (row) => handleDelete(row)
      }
    ]
  }
]

const options = {
  "border": true,
  "stripe": true,
  "highlightCurrentRow": true,
  "headerCellStyle": {
    "background": "#f5f7fa"
  },
  "rowkey": "id"
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      // await axios.delete(\`/api/item/\${row.id}\`)
      ElMessage.success('删除成功')
      tableRef.value?.httpRequestInstance()
    })
    .catch(() => {})
}

function openForm(title, row = {}) {
  const formData = reactive({ name: '', phone: '', status: '', email: '', createTime: '', ...row })
  const isView = title === '查看'
  dialog({
    title,
    width: '500px',
    render: (h, { registerRef }) => (
      <EsForm
        ref={el => el && registerRef('form', el)}
        model={formData}
        formItemList={[
        {
                "prop": "name",
                "label": "姓名",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入姓名"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入姓名",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "phone",
                "label": "手机号",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入手机号"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入手机号",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "status",
                "label": "状态",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择状态"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择状态",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "启用",
                                "value": 1
                        },
                        {
                                "label": "禁用",
                                "value": 0
                        }
                ]
        },
        {
                "prop": "email",
                "label": "邮箱",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入邮箱"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入邮箱",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "createTime",
                "label": "创建时间",
                "formtype": "datePicker",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择创建时间",
                        "type": "daterange",
                        "valueFormat": "YYYY-MM-DD"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入创建时间",
                                        "trigger": "blur"
                                }
                        ]
                }
        }
]}
      />
    ),
    configBtn: isView ? [
      { name: '关闭', click: (_, { close }) => close() }
    ] : [
      { name: '取消', click: (_, { close }) => close() },
      { name: '确定', type: 'primary', click: async (_, { close, getRefs }) => {
        try {
          await getRefs('form')?.validate()
          // TODO: 调用保存接口
          // await axios.post('/api/save', formData)
          close()
          tableRef.value?.httpRequestInstance()
        } catch {
          // 表单验证失败
        }
      }}
    ]
  })
}
</script>"
`;

exports[`generateCrudPage — snapshot tests > generates stable output for: 系统配置 1`] = `
"<template>
  <es-table
    ref="tableRef"
    :columns="columns"
    :options="options"
    v-model:data-source="tableData"
    v-model:pagination="pagination"
  >
    <es-form :model="queryForm" :form-item-list="formItems" :config-btn="queryBtns" />
  </es-table>
</template>

<script setup lang="jsx">
import { reactive, ref, h } from 'vue'
import { useDialog } from '@es-plus/vue3'
import { ElTag, ElMessageBox, ElMessage } from 'element-plus'

const queryForm = reactive({ name: '', type: '' })
const tableData = ref([])
const tableRef = ref(null)
const pagination = ref({ current: 1, pageSize: 10, total: 0 })
const dialog = useDialog()

const formItems = [
  {
    "prop": "name",
    "label": "名称",
    "formtype": "Input",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入名称"
    }
  },
  {
    "prop": "type",
    "label": "类型",
    "formtype": "Select",
    "span": 18,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择类型"
    },
    "dataOptions": [
      {
        "label": "类型A",
        "value": "A"
      },
      {
        "label": "类型B",
        "value": "B"
      },
      {
        "label": "类型C",
        "value": "C"
      }
    ]
  }
]

const queryBtns = [
  { name: '查询', type: 'primary', key: 'query', triggerEvent: true },
  { name: '重置', key: 'rest', triggerEvent: true },
  { name: '新增', type: 'primary', key: 'add', icon: 'Plus', click: () => openForm('新增') },
  { name: '导出', key: 'export', icon: 'Download', click: () => { /* TODO: 调用导出接口 */ } },
]

const columns = [
  {
    "prop": "name",
    "label": "名称"
  },
  {
    "prop": "type",
    "label": "类型"
  },
  {
    "prop": "code",
    "label": "编号"
  },
  {
    "prop": "description",
    "label": "描述"
  },
  {
    "prop": "status",
    "label": "状态",
    render: (_, { row }) => h(ElTag, { type: row.status === 1 ? 'success' : 'danger' }, () => row.status === 1 ? '启用' : '禁用')
  },
  {
    "prop": "operate",
    "label": "操作",
    "width": 180,
    "btns": [
      {
        "name": "编辑", "type": "primary", "clickEvent": (row) => openForm('编辑', row)
      },
      {
        "name": "删除", "type": "danger", "clickEvent": (row) => handleDelete(row)
      }
    ]
  }
]

const options = {
  "border": true,
  "stripe": true,
  "highlightCurrentRow": true,
  "headerCellStyle": {
    "background": "#f5f7fa"
  },
  "rowkey": "id"
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      // await axios.delete(\`/api/item/\${row.id}\`)
      ElMessage.success('删除成功')
      tableRef.value?.httpRequestInstance()
    })
    .catch(() => {})
}

function openForm(title, row = {}) {
  const formData = reactive({ name: '', type: '', code: '', description: '', status: '', ...row })
  const isView = title === '查看'
  dialog({
    title,
    width: '500px',
    render: (h, { registerRef }) => (
      <EsForm
        ref={el => el && registerRef('form', el)}
        model={formData}
        formItemList={[
        {
                "prop": "name",
                "label": "名称",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入名称"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入名称",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "type",
                "label": "类型",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择类型"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择类型",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "类型A",
                                "value": "A"
                        },
                        {
                                "label": "类型B",
                                "value": "B"
                        },
                        {
                                "label": "类型C",
                                "value": "C"
                        }
                ]
        },
        {
                "prop": "code",
                "label": "编号",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入编号"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入编号",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "description",
                "label": "描述",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入描述",
                        "type": "textarea",
                        "rows": 3
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入描述",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "status",
                "label": "状态",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择状态"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择状态",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "启用",
                                "value": 1
                        },
                        {
                                "label": "禁用",
                                "value": 0
                        }
                ]
        }
]}
      />
    ),
    configBtn: isView ? [
      { name: '关闭', click: (_, { close }) => close() }
    ] : [
      { name: '取消', click: (_, { close }) => close() },
      { name: '确定', type: 'primary', click: async (_, { close, getRefs }) => {
        try {
          await getRefs('form')?.validate()
          // TODO: 调用保存接口
          // await axios.post('/api/save', formData)
          close()
          tableRef.value?.httpRequestInstance()
        } catch {
          // 表单验证失败
        }
      }}
    ]
  })
}
</script>"
`;

exports[`generateCrudPage — snapshot tests > generates stable output for: 角色权限 1`] = `
"<template>
  <es-table
    ref="tableRef"
    :columns="columns"
    :options="options"
    v-model:data-source="tableData"
    v-model:pagination="pagination"
  >
    <es-form :model="queryForm" :form-item-list="formItems" :config-btn="queryBtns" />
  </es-table>
</template>

<script setup lang="jsx">
import { reactive, ref, h } from 'vue'
import { useDialog } from '@es-plus/vue3'
import { ElTag, ElMessageBox, ElMessage } from 'element-plus'

const queryForm = reactive({ field_4: '', status: '' })
const tableData = ref([])
const tableRef = ref(null)
const pagination = ref({ current: 1, pageSize: 10, total: 0 })
const dialog = useDialog()

const formItems = [
  {
    "prop": "field_4",
    "label": "角色名称",
    "formtype": "Input",
    "span": 6,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入角色名称"
    }
  },
  {
    "prop": "status",
    "label": "状态",
    "formtype": "Select",
    "span": 18,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择状态"
    },
    "dataOptions": [
      {
        "label": "启用",
        "value": 1
      },
      {
        "label": "禁用",
        "value": 0
      }
    ]
  }
]

const queryBtns = [
  { name: '查询', type: 'primary', key: 'query', triggerEvent: true },
  { name: '重置', key: 'rest', triggerEvent: true },
  { name: '新增', type: 'primary', key: 'add', icon: 'Plus', click: () => openForm('新增') },
]

const columns = [
  {
    "prop": "field_4",
    "label": "角色名称"
  },
  {
    "prop": "status",
    "label": "状态",
    render: (_, { row }) => h(ElTag, { type: row.status === 1 ? 'success' : 'danger' }, () => row.status === 1 ? '启用' : '禁用')
  },
  {
    "prop": "description",
    "label": "描述"
  },
  {
    "prop": "createTime",
    "label": "创建时间",
    "width": 180
  },
  {
    "prop": "operate",
    "label": "操作",
    "width": 180,
    "btns": [
      {
        "name": "编辑", "type": "primary", "clickEvent": (row) => openForm('编辑', row)
      },
      {
        "name": "删除", "type": "danger", "clickEvent": (row) => handleDelete(row)
      }
    ]
  }
]

const options = {
  "border": true,
  "stripe": true,
  "highlightCurrentRow": true,
  "headerCellStyle": {
    "background": "#f5f7fa"
  },
  "rowkey": "id"
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      // await axios.delete(\`/api/item/\${row.id}\`)
      ElMessage.success('删除成功')
      tableRef.value?.httpRequestInstance()
    })
    .catch(() => {})
}

function openForm(title, row = {}) {
  const formData = reactive({ field_4: '', status: '', description: '', createTime: '', ...row })
  const isView = title === '查看'
  dialog({
    title,
    width: '500px',
    render: (h, { registerRef }) => (
      <EsForm
        ref={el => el && registerRef('form', el)}
        model={formData}
        formItemList={[
        {
                "prop": "field_4",
                "label": "角色名称",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入角色名称"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入角色名称",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "status",
                "label": "状态",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择状态"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择状态",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "启用",
                                "value": 1
                        },
                        {
                                "label": "禁用",
                                "value": 0
                        }
                ]
        },
        {
                "prop": "description",
                "label": "描述",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入描述",
                        "type": "textarea",
                        "rows": 3
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入描述",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "createTime",
                "label": "创建时间",
                "formtype": "datePicker",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择创建时间",
                        "type": "daterange",
                        "valueFormat": "YYYY-MM-DD"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入创建时间",
                                        "trigger": "blur"
                                }
                        ]
                }
        }
]}
      />
    ),
    configBtn: isView ? [
      { name: '关闭', click: (_, { close }) => close() }
    ] : [
      { name: '取消', click: (_, { close }) => close() },
      { name: '确定', type: 'primary', click: async (_, { close, getRefs }) => {
        try {
          await getRefs('form')?.validate()
          // TODO: 调用保存接口
          // await axios.post('/api/save', formData)
          close()
          tableRef.value?.httpRequestInstance()
        } catch {
          // 表单验证失败
        }
      }}
    ]
  })
}
</script>"
`;

exports[`generateCrudPage — snapshot tests > generates stable output for: 订单列表 1`] = `
"<template>
  <es-table
    ref="tableRef"
    :columns="columns"
    :options="options"
    v-model:data-source="tableData"
    v-model:pagination="pagination"
  >
    <es-form :model="queryForm" :form-item-list="formItems" :config-btn="queryBtns" />
  </es-table>
</template>

<script setup lang="jsx">
import { reactive, ref, h } from 'vue'
import { useDialog } from '@es-plus/vue3'
import { ElTag, ElMessageBox, ElMessage } from 'element-plus'

const queryForm = reactive({ orderNo: '', customerName: '', field_1: '', status: '' })
const tableData = ref([])
const tableRef = ref(null)
const pagination = ref({ current: 1, pageSize: 10, total: 0 })
const dialog = useDialog()

const formItems = [
  {
    "prop": "orderNo",
    "label": "订单号",
    "formtype": "Input",
    "span": 8,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入订单号"
    }
  },
  {
    "prop": "customerName",
    "label": "客户名称",
    "formtype": "Input",
    "span": 8,
    "attrs": {
      "clearable": true,
      "placeholder": "请输入客户名称"
    }
  },
  {
    "prop": "field_1",
    "label": "日期范围",
    "formtype": "datePicker",
    "span": 8,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择日期范围",
      "type": "daterange",
      "valueFormat": "YYYY-MM-DD"
    }
  },
  {
    "prop": "status",
    "label": "状态",
    "formtype": "Select",
    "span": 24,
    "attrs": {
      "clearable": true,
      "placeholder": "请选择状态"
    },
    "dataOptions": [
      {
        "label": "启用",
        "value": 1
      },
      {
        "label": "禁用",
        "value": 0
      }
    ]
  }
]

const queryBtns = [
  { name: '查询', type: 'primary', key: 'query', triggerEvent: true },
  { name: '重置', key: 'rest', triggerEvent: true },
]

const columns = [
  {
    "prop": "orderNo",
    "label": "订单号"
  },
  {
    "prop": "status",
    "label": "状态",
    render: (_, { row }) => h(ElTag, { type: row.status === 1 ? 'success' : 'danger' }, () => row.status === 1 ? '启用' : '禁用')
  },
  {
    "prop": "customer",
    "label": "客户"
  },
  {
    "prop": "amount",
    "label": "金额",
    "align": "right"
  },
  {
    "prop": "createTime",
    "label": "创建时间",
    "width": 180
  },
  {
    "prop": "operate",
    "label": "操作",
    "width": 180,
    "btns": [
      {
        "name": "查看", "type": "primary", "clickEvent": (row) => openForm('查看', row)
      },
      {
        "name": "删除", "type": "danger", "clickEvent": (row) => handleDelete(row)
      }
    ]
  }
]

const options = {
  "border": true,
  "stripe": true,
  "highlightCurrentRow": true,
  "headerCellStyle": {
    "background": "#f5f7fa"
  },
  "rowkey": "id"
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      // await axios.delete(\`/api/item/\${row.id}\`)
      ElMessage.success('删除成功')
      tableRef.value?.httpRequestInstance()
    })
    .catch(() => {})
}

function openForm(title, row = {}) {
  const formData = reactive({ orderNo: '', customerName: '', field_1: '', status: '', customer: '', amount: '', createTime: '', ...row })
  const isView = title === '查看'
  dialog({
    title,
    width: '500px',
    render: (h, { registerRef }) => (
      <EsForm
        ref={el => el && registerRef('form', el)}
        model={formData}
        formItemList={[
        {
                "prop": "orderNo",
                "label": "订单号",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入订单号"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入订单号",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "customerName",
                "label": "客户名称",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入客户名称"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入客户名称",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "field_1",
                "label": "日期范围",
                "formtype": "datePicker",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择日期范围",
                        "type": "daterange",
                        "valueFormat": "YYYY-MM-DD"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入日期范围",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "status",
                "label": "状态",
                "formtype": "Select",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择状态"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请选择状态",
                                        "trigger": "change"
                                }
                        ]
                },
                "dataOptions": [
                        {
                                "label": "启用",
                                "value": 1
                        },
                        {
                                "label": "禁用",
                                "value": 0
                        }
                ]
        },
        {
                "prop": "customer",
                "label": "客户",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入客户"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入客户",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "amount",
                "label": "金额",
                "formtype": "Input",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请输入金额"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入金额",
                                        "trigger": "blur"
                                }
                        ]
                }
        },
        {
                "prop": "createTime",
                "label": "创建时间",
                "formtype": "datePicker",
                "span": 24,
                "attrs": {
                        "clearable": true,
                        "placeholder": "请选择创建时间",
                        "type": "daterange",
                        "valueFormat": "YYYY-MM-DD"
                },
                "formItemOptions": {
                        "rules": [
                                {
                                        "required": true,
                                        "message": "请输入创建时间",
                                        "trigger": "blur"
                                }
                        ]
                }
        }
]}
      />
    ),
    configBtn: isView ? [] : [
      { name: '取消', click: (_, { close }) => close() },
      { name: '确定', type: 'primary', click: async (_, { close, getRefs }) => {
        try {
          await getRefs('form')?.validate()
          // TODO: 调用保存接口
          // await axios.post('/api/save', formData)
          close()
          tableRef.value?.httpRequestInstance()
        } catch {
          // 表单验证失败
        }
      }}
    ]
  })
}
</script>"
`;
